objects/MFG_Discrete_Partners_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logistics_Helper__c</fullName>
        <formula>VALUE(Text(Logistics__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logistics Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistics_Rating__c</fullName>
        <formula>IMAGE(
IF( Logistics_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Logistics_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Logistics_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Logistics_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Logistics_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Logistics rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logistics Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics__c</fullName>
        <inlineHelpText>On a scale of 1-5, 5 being the best, how do you rate logistics services of the supplier?</inlineHelpText>
        <label>Logistics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Helper__c</fullName>
        <formula>VALUE(Text(Quality__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Rating__c</fullName>
        <formula>IMAGE(
IF(Quality_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Quality_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Quality_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Quality_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Quality_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Quality rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Helper__c</fullName>
        <formula>VALUE(Text(Service__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Rating__c</fullName>
        <formula>IMAGE(
IF(Service_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Service_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Service_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Service_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Service_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Service rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Name_Helper__c</fullName>
        <label>Supplier Name Helper</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ratings</relationshipLabel>
        <relationshipName>Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transparency_Helper__c</fullName>
        <formula>VALUE(Text(Transparency__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transparency Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transparency_Rating__c</fullName>
        <formula>IMAGE(
IF(Transparency_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Transparency_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Transparency_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Transparency_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Transparency_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Transparency rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transparency Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transparency__c</fullName>
        <label>Transparency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_Rating_Helper__c</fullName>
        <formula>VALUE(Text(Trust__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trust Rating Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trust_Rating__c</fullName>
        <formula>IMAGE(
IF( Trust_Rating_Helper__c  = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Trust_Rating_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Trust_Rating_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Trust_Rating_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Trust_Rating_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Trust rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trust Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trust__c</fullName>
        <label>Trust</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Question_1_Helper__c</fullName>
        <formula>VALUE(Text( Vendor_Question_1__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Question 1 Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Question_1_Rating__c</fullName>
        <formula>IMAGE(
IF(Vendor_Question_1_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Vendor_Question_1_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Vendor_Question_1_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Vendor_Question_1_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Vendor_Question_1_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Vendor rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Question 1 Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Question_1__c</fullName>
        <label>Vendor Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Question_2_Helper__c</fullName>
        <formula>VALUE(Text( Vendor_Question_2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Question 2 Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Question_2_Rating__c</fullName>
        <formula>IMAGE(
IF( Vendor_Question_2_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Vendor_Question_2_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Vendor_Question_2_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Vendor_Question_2_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Vendor_Question_2_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Vendor rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Question 2 Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Question_2__c</fullName>
        <label>Vendor Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Question_3_Helper__c</fullName>
        <formula>VALUE(Text( Vendor_Question_3__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Question 3 Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Question_3_Rating__c</fullName>
        <formula>IMAGE(
IF( Vendor_Question_3_Helper__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Vendor_Question_3_Helper__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Vendor_Question_3_Helper__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Vendor_Question_3_Helper__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Vendor_Question_3_Helper__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Vendor rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Question 3 Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Question_3__c</fullName>
        <label>Vendor Question 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SRM_Rating</fullName>
        <columns>NAME</columns>
        <columns>Quality_Rating__c</columns>
        <columns>Logistics_Rating__c</columns>
        <columns>Service_Rating__c</columns>
        <columns>Transparency_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>SRM Rating</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>